[package]
name = "hc-nb-api-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3.31"
openssl = "0.10.73"
postgres-openssl = "0.5.1"
reqwest = { version = "0.12.22", features = ["json"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
